// Provides localized UI strings for the console application.
//
// All text displayed to the user (menu labels, prompts, error messages, etc.)
// is stored in this service rather than being hard-coded in the View.
// This makes it straightforward to add new languages without touching display logic.
// 
// Currently supported languages: French ("FR") and English (default, EN).
// Language is selected once at application startup and cannot be changed at runtime.
namespace EasySave.ConsoleApp;

public class TranslationService
{
    private readonly Dictionary<string, string> _translations;

    public TranslationService(string? language)
    {
        if (language == "FR")
        {
            Console.WriteLine($"\nYou selected french\n");           
            _translations = new Dictionary<string, string>
            {
                { "menu",           "=== MENU ===" },
                { "opt1",           "1. Créer un job" },
                { "opt2",           "2. Voir les jobs" },
                { "opt3",           "3. Lancer un job" },
                { "opt4",           "4. Supprimer un job" },
                { "opt5",           "5. Quitter" },
                { "choice",         "Votre choix : " },
                { "invalidChoice",  "Choix invalide." },

                //Log
                { "logFormatPrompt", "Format des logs JSON / XML ? " },

                // Créer
                { "createName",     "Nom du job : " },
                { "createSource",   "Chemin source : " },
                { "createTarget",   "Chemin destination : " },
                { "createType",     "Type (1=Full, 2=Differential) : " },
                { "createOk",       "Job créé avec succès !" },
                { "createMaxReached","Limite de 5 jobs atteinte. Supprimez un job avant d'en créer un nouveau." },
                { "createNameExists","Un job avec ce nom existe déjà." },
                { "createSourceIsFile", "Le chemin indique un fichier. Un répertoire est attendu"},
                { "createSourceNotFound","Le répertoire n'existe pas."}, 

                // Voir
                { "noJobs",         "Aucun job disponible." },
                { "jobHeader",      "ID | Nom                 | Type         | Source -> Destination" },
                { "jobSep",         "------------------------------------------------------------" },

                // Lancer
                { "runPrompt",      "Entrez l'ID ou la plage à lancer (ex: 1 / 1-3 / 1;3) : " },
                { "runDone",        "Backup terminée : " },
                { "runNotFound",    "Job introuvable : " },

                // Supprimer
                { "deletePrompt",   "Entrez l'ID du job à supprimer : " },
                { "deleteOk",       "Job supprimé." },
                { "deleteNotFound", "Job introuvable." },

                // Général
                { "invalidId",      "ID invalide." },
            };
        }
        else
        {
            Console.WriteLine($"\nYou selected english\n");           
            _translations = new Dictionary<string, string>
            {
                { "menu",           "=== MENU ===" },
                { "opt1",           "1. Create a job" },
                { "opt2",           "2. View jobs" },
                { "opt3",           "3. Run a job" },
                { "opt4",           "4. Delete a job" },
                { "opt5",           "5. Quit" },
                { "choice",         "Your choice: " },
                { "invalidChoice",  "Invalid choice." },

                //Log
                { "logFormatPrompt", "Log format JSON / XML? " },

                // Create
                { "createName",     "Job name: " },
                { "createSource",   "Source path: " },
                { "createTarget",   "Target path: " },
                { "createType",     "Type (1=Full, 2=Differential): " },
                { "createOk",       "Job created successfully!" },
                { "createMaxReached","5 job limit reached. Delete a job before creating a new one." },
                { "createNameExists","A job with this name already exists." },
                { "createSourceIsFile", "Path leads to a file. Expected directory or folder"},
                { "createSourceNotFound", "Directory does not exist"}, 

                // View
                { "noJobs",         "No jobs available." },
                { "jobHeader",      "ID | Name                 | Type         | Source -> Destination" },
                { "jobSep",         "------------------------------------------------------------" },

                // Run
                { "runPrompt",      "Enter ID or range to run (e.g. 1 / 1-3 / 1;3): " },
                { "runDone",        "Backup done: " },
                { "runNotFound",    "Job not found: " },

                // Delete
                { "deletePrompt",   "Enter job ID to delete: " },
                { "deleteOk",       "Job deleted." },
                { "deleteNotFound", "Job not found." },

                // General
                { "invalidId",      "Invalid ID." },
            };
        }
    }

    public string T(string key) =>
        _translations.TryGetValue(key, out var val) ? val : key;
}